Current:
Ryan C. Gordon (Epic Games) - Thu Apr  8 17:57:37 EDT 2004
 * Mac version deals with the default install path ("/Applications") not
   existing. Used to crash in this case.
 * Several fixes to Mac version to treat strings as Latin1, which lets us
   localize European languages that use high-ascii chars. Long way to go to
   support full Unicode, though.
Ryan C. Gordon (Epic Games) - Fri Apr  2 00:00:51 EST 2004
 * Check for "cd9660" file systems so FreeBSD with binary compat layer works.
Ryan C. Gordon (Epic Games) - Wed Mar 31 11:30:47 EST 2004
 * Allow one hardcoded translation instead of using external .po files.
Ryan C. Gordon (Epic Games) - Tue Mar 30 21:11:52 EST 2004
 * Fixed freeing of bogus pointer in Carbon UI.
Ryan C. Gordon (Epic Games) - Tue Mar  9 06:49:48 EST 2004
 * log_fatal() now cleans up, shows explanation via UI.
 * logging prepends "loki_setup: " so it makes sense when text appears in
   system logs, etc...helpful on MacOSX.
 * Another attempt at file i/o failure.
 * tar plugin considers "unknown type" to be fatal, since it usually
   represents failed i/o, file corruption, or missing bz2 support. At any
   rate, not being fatal means a bogus install, so this makes sense.
 * carbon_ui now sets focus to text entry field when prompting for cdkey.
Ludwig Nussel - Sun Mar  7 18:31:37 PST 2004
 * Added dlopen()-based support for libbz2 (optional)
Ryan C. Gordon (Epic Games) - Sun Mar  7 11:30:01 EST 2004
 * Carbon_ui's main window is now set to compositing.
Ryan C. Gordon (Epic Games) - Fri Mar  5 05:40:55 EST 2004
 * Made carbon_ui's install progress conform to Apple HI Guidelines.
Ryan C. Gordon (Epic Games) - Fri Mar  5 05:10:50 EST 2004
 * Put some sanity checking into file i/o code.
Ryan C. Gordon (Epic Games) - Thu Mar  4 01:18:00 EST 2004
 * Changed "please insert/mount disc" text; please update your setup.xml
   files and localizations!
Ryan C. Gordon (Epic Games) - Mon Mar  1 22:50:18 EST 2004